# mirea

./: .gitmodules  README.md  practice_1.cpp
1 курс/1 семестр/процедурное программирование/: practice_1.cpp  practice_3.cpp  practice_4.cpp  practice_5.cpp
1 курс/2 семестр/Искусственный интеллект/: README.md  Рабочая тетрадь 1.ipynb  Рабочая тетрадь 2.ipynb  Рабочая тетрадь 3.ipynb  Рабочая тетрадь 4.ipynb
1 курс/2 семестр/Искуственный интеллект/: Рабочая тетрадь 1.ipynb
1 курс/2 семестр/ООП/: 1_1_1.md  1_1_5.md  1_2_1.md  1_3_1.md  2_1_1.md  2_1_2.md  2_1_3.md  2_1_4.md  2_2_1.md  3_1_1.md  README.md
1 курс/2 семестр/ООП/files/: README.md
1 курс/2 семестр/СиАОД/1.1/: algorithms.cpp  sort.cpp
1 курс/процедурное программирование/: practice_2.cpp  practice_3.cpp  practice_4.cpp
2 курс/3 семестр/СиАОД/5_1/: 5_1.cpp  CMakeLists.txt  utils.hpp
2 курс/3 семестр/СиАОД/5_2/: 5_2.cpp  CMakeLists.txt
2 курс/3 семестр/СиАОД/6_1/: 6_1.cpp  CMakeLists.txt  HashTable.cpp  HashTable.h  Specialization.h
2 курс/3 семестр/СиАОД/6_2/: 6_2.cpp  CMakeLists.txt
2 курс/3 семестр/СиАОД/7_1/: .clang-format  7_1.cpp  BST.cpp  BST.h  CMakeLists.txt
2 курс/3 семестр/СиАОД/7_2/: 7_2.cpp  BellmanFord.cpp  BellmanFord.h  CMakeLists.txt
2 курс/3 семестр/СиАОД/8_1_1/: 8_1_1.cpp  CMakeLists.txt
2 курс/3 семестр/СиАОД/8_1_2/: 8_1_2.cpp  CMakeLists.txt
2 курс/3 семестр/СиАОД/8_1_21/: 8_1_21.cpp  CMakeLists.txt  ShannonFano.cpp  ShannonFano.h
term-1/: practice_1.cpp  practice_2.cpp  practice_4.cpp  practice_5.cpp
term-1/1 курс/процедурное программирование/: practice_4.cpp
(+14 files in other folders)
